--- a/src/style.css
+++ b/src/style.css
@@ -37,3 +37,16 @@ a {
 a:hover {
   color: #666;
 }
+
+.footer {
+  float: left;
+  width: 100%;
+  height: 40px;
+  font-weight: 200;
+  border-top: 5px solid black;
+  margin-bottom: 0;
+}
+
+.footer p {
+  font-size: 20px;
+}
