--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,20 @@
-body {
-  margin: 3%;
+html, body {
+  margin: 0;
+  padding: 0;
+  height: calc(100% - 20px);
+  overflow-y: auto;
 }
 
-header {
-  padding: 10px;
+body {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 0 auto;
 }
+
+/* .content {
+  flex: 1;
+} */
 
 nav {
   display: flex;
@@ -19,12 +29,12 @@ nav {
   color: #333;
 }
 
-ul {
+nav ul {
   list-style-type: none;
   display: flex;
 }
 
-li {
+nav ul li {
   margin-left: 10px;
 }
 
@@ -38,13 +48,91 @@ a:hover {
   color: #666;
 }
 
-.footer {
-  float: left;
+#home-container > ul {
+  padding-left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+#home-container > ul > li {
+  flex-basis: calc(33.33% - 2%); 
+  margin: 4% 0; 
+  list-style-type: none;
+}
+
+.item > h3 {
+  margin: 0;
+}
+
+.item {
+  margin: 7% 10%;
+  display: flex;
+  gap: 50px;
+}
+
+.list-item-image {
   width: 100%;
-  height: 40px;
-  font-weight: 200;
+  height: auto;
+}
+
+.like-and-icon {
+  margin-left: 50px;
+}
+
+.like-count {
+  margin-top: 10px;
+}
+
+/* Default heart icon */
+.fa-heart {
+  color: black; /* Set the default color */
+  transition: color 0.5s; /* Add a smooth transition effect */
+}
+
+/* Active (liked) heart icon */
+.fa-heart.liked {
+  color: red; /* Set the color when liked */
+}
+
+.like-and-icon i {
+  cursor: pointer;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.comments-button {
+  width: 80%;
+  background-color: #000080;
+  color: #fff;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.comments-button:hover {
+  background-color: #0056b3;
+}
+
+.comments-button:focus {
+  outline: none;
+}
+
+.comments-button:active {
+  transform: scale(0.95);
+}
+
+.footer {
+  padding: 20px;
+  flex-shrink: 0;
+  margin-top: auto;
   border-top: 5px solid black;
-  margin-bottom: 0;
 }
 
 .footer p {
