--- a/src/style.css
+++ b/src/style.css
@@ -48,5 +48,115 @@ a:hover {
 }
 
 .footer p {
-  font-size: 20px;
+  font-size: 16px;
+}
+
+.center {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.center button {
+  padding: 10px 20px;
+  font-size: 15px;
+  font-weight: 600;
+  color: #222;
+  background: #f5f5f5;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.popup {
+  position: absolute;
+  top: 150%;
+  left: 50%;
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(1.25);
+  width: 80%;
+  padding: 20px 30px;
+  background: #fff;
+  box-shadow: 2px 5px 5px 3px black;
+  border-radius: 5px;
+  transition: top 0ms ease-in-out 200ms, opacity 200ms ease-in-out 0ms, transform 20ms ease-in-out 0ms;
+}
+
+.popup.active {
+  top: 50%;
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+  transition: top 0ms ease-in-out 0ms, opacity 200ms ease-in-out 0ms, transform 20ms ease-in-out 0ms;
+}
+
+.popup .close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 15px;
+  color: #eee;
+  cursor: pointer;
+  text-align: center;
+  line-height: 15px;
+  border-radius: 15px;
+}
+
+.popup .form h2 {
+  margin: 10px 0 20px;
+  font-size: 25px;
+  color: #222;
+  text-align: center;
+}
+
+.popup .form .form-element {
+  margin: 15px 0;
+  gap: 20px;
+}
+
+.popup .form .form-element input {
+  margin-top: 5px;
+  width: 100%;
+  border-radius: 5px;
+  outline: none;
+  padding: 10px;
+  display: block;
+}
+
+.popup-container {
+  text-align: center;
+  padding: 20px;
+}
+
+.popup img {
+  width: 50%;
+  height: 40%;
+}
+
+.popup .form textarea {
+  height: 100px;
+  display: block;
+  width: 40%;
+  margin: 10px auto;
+  border: 1px solid #333;
+  border-radius: 8px;
+  outline: none;
+}
+
+.popup .form button {
+  height: 30px;
+  width: 50%;
+  margin-left: -20%;
+  text-align: left;
+  padding: 0 8px;
+  background: #222;
+  color: #f5f5f5;
+  border-radius: 8px;
+  cursor: pointer;
+  border: none;
+  font-size: 15px;
+}
+
+.popup .form button:hover {
+  color: #ea9215;
+  background-color: #f1f1f1;
 }
