--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: calc(100% - 20px);
@@ -52,8 +53,8 @@ a:hover {
 }
 
 #home-container > ul > li {
-  flex-basis: calc(33.33% - 2%); 
-  margin: 4% 0; 
+  flex-basis: calc(33.33% - 2%);
+  margin: 4% 0;
   list-style-type: none;
 }
 
@@ -68,7 +69,7 @@ a:hover {
 }
 
 .list-item-image {
-  width: 100%;
+  width: 90%;
   height: auto;
 }
 
@@ -83,12 +84,12 @@ a:hover {
 /* Default heart icon */
 .fa-heart {
   color: black; /* Set the default color */
-  transition: color 0.5s; /* Add a smooth transition effect */
+  transition: color 0.5s;
 }
 
 /* Active (liked) heart icon */
 .fa-heart.liked {
-  color: red; /* Set the color when liked */
+  color: red; 
 }
 
 .like-and-icon i {
