--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: calc(100% - 20px);
@@ -56,8 +57,8 @@ a:hover {
 }
 
 #home-container > ul > li {
-  flex-basis: calc(33.33% - 2%); 
-  margin: 4% 0; 
+  flex-basis: calc(33.33% - 2%);
+  margin: 4% 0;
   list-style-type: none;
 }
 
